# AML

./: EVENT_SYSTEM_README.md  README.md  RUST_DART_EVENT_SYSTEM_GUIDE.md  RUST_EVENT_CALLBACK_GUIDE.md  pubspec.yaml
.vercel/: project.json
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: aml_app.dart  main.dart
lib/api/: cache_service.dart  modrinth_api.dart
lib/app/: app.dart  app_store.dart
lib/core/: window_manager.dart
lib/database/: app_database.dart  persistent_signal_extension.dart
lib/model/: app_base_state.dart  app_base_state.g.dart  app_settings.dart  progress_item.dart
lib/services/: java_download_service.dart
lib/state/: app_state.dart  minecraft_state.dart  progress_state.dart
lib/storage/: app_settings_repository.dart  debug_commands.dart  main_config.dart  scheme.dart
lib/store/: app_store.dart
lib/util/: java_download.dart  java_download_rust.dart  minecraft.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: config.rs  error.rs  frb_generated.rs  lib.rs
rust/src/api/: java_download.rs  mod.rs  simple.rs
rust/src/launcher/: download.rs
rust/src/minecraft/: mc.rs  mod.rs  modded.rs
rust/src/state/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_aml.podspec
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+150 files in other folders)
