[package]
name = "rust_lib_aml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

serde_json = "1.0.143"
data-url = "0.3.1"
tracing-error = "0.2.1"
thiserror = "2.0.15"
serde_ini = "0.2.0"
quartz_nbt = "0.2.9"
ariadne = "0.5.1"
uuid = "1.18.0"
url = "2.5.4"
tracing = "0.1.41"
bytes = "1.10.1"
sqlx = "0.8.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
